# odri_dual_motor_testbed_robot

./: .git-blame-ignore-revs  .pre-commit-config.yaml  README.md  flake.nix  odri_dual_motor_testbed_gazebo.repos  odri_dual_motor_testbed_robot.repos
.github/workflows/: ci_ros2.yml  update-flake-lock.yml
odri_dual_motor_testbed_bringup/: CMakeLists.txt  package.nix  package.xml
odri_dual_motor_testbed_bringup/config/: odri_dual_motor_testbed_controllers.yaml
odri_dual_motor_testbed_bringup/launch/: odri_dual_motor_testbed.launch.py  odri_dual_motor_testbed_ctrl.launch.py  odri_dual_motor_testbed_position_only.launch.py  odri_dual_motor_testbed_position_only_gazebo.launch.py  odri_dual_motor_testbed_pub.launch.py  odri_dual_motor_testbed_rviz.launch.py  test_forward_position_controller.launch.py
odri_dual_motor_testbed_description/: CMakeLists.txt  odri_dual_motor_testbed.rviz  package.nix  package.xml
odri_dual_motor_testbed_description/config/: odri_dual_motor_testbed_config.yaml
odri_dual_motor_testbed_description/gazebo/: gazebo.urdf.xacro
odri_dual_motor_testbed_description/launch/: robot_state_publisher.launch.py  show.launch.py
odri_dual_motor_testbed_description/meshes/: dual_motor_testbed_base_v2.stl  dual_motor_testbed_cover_v2.stl  encoder_code_wheel_mount_v2.stl  fivebar_2dof_pybullet.urdf
odri_dual_motor_testbed_description/meshes/assets/: dual_motor_testbed_base.part  dual_motor_testbed_base.stl  dual_motor_testbed_cover.part  dual_motor_testbed_cover.stl  fastener_shcs_m3_6.part  fastener_shcs_m3_6.stl  hand_wheel.part  hand_wheel.stl  l1l.part  l1l.stl  l1r.part  l1r.stl  l2l.part  l2l.stl  l2r.part  l2r.stl  motor_antigravity_4004_custom_shaft.part  motor_antigravity_4004_custom_shaft.stl  motor_antigravity_4004_rotor.part  part_13.part  part_13.stl
odri_dual_motor_testbed_description/robots/: fivebar_2dof.urdf.xacro  odri_dual_motor_testbed.urdf.xacro
odri_dual_motor_testbed_description/ros2_control/: system_dual_motor_testbed.ros2_control.xacro
odri_dual_motor_testbed_description/urdf/: base.urdf.xacro  wheel.urdf.xacro
odri_dual_motor_testbed_gazebo/: CMakeLists.txt  package.nix  package.xml
odri_dual_motor_testbed_gazebo/config/: forward_command_controller.yaml  gui.config
odri_dual_motor_testbed_gazebo/launch/: odri_dual_motor_testbed_gazebo.launch.py  odri_dual_motor_testbed_position_only_gazebo.launch.py  robot_spawn.launch.py
odri_dual_motor_testbed_gazebo/src/: FiveBarClosurePlugin.cc  FiveBarClosurePlugin.hh
odri_dual_motor_testbed_robot/: CMakeLists.txt  package.nix  package.xml
